<resources>
    <string name="app_name">The Notes</string>
    <string name="notes">notes</string>
    <string name="search_notes">Search notes</string>
    <string name="there_is_no_notes_yet">There is no notes yet</string>
    <string name="note_title">Title</string>
    <string name="note_subtitle">Subtitle</string>
    <string name="type_note_here">Type note here…</string>
    <string name="hub">hub</string>
    <string name="btc">Bitcoin</string>
    <string name="eth">Ethereum</string>
    <string name="chart">Chart</string>
    <string name="notes_hub">Notes</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="capital_notes">Notes</string>
    <string name="add">Add</string>
    <string name="add_value_to_chart">Add Value to Chart</string>
    <string name="add_a_value">Add a value</string>
    <string name="add_a_label">Add a label</string>
    <string name="delete_value_from_chart">Delete Value From Chart</string>
    <string name="write_a_label_to_delete">Write a label to delete</string>
    <string name="delete_chart_value">Delete</string>
    <string name="settings">Settings</string>
</resources>