<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/layout_header_hub"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_23sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_hub"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:paddingStart="@dimen/_30sdp"
            android:paddingEnd="@dimen/_4sdp"
            android:text="@string/hub"
            android:fontFamily="@font/affect_bold"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_20ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_actions"
        app:layout_constraintTop_toBottomOf="@id/layout_header_hub"
        android:orientation="vertical"
        android:layout_gravity="center"

        android:layout_marginTop="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_notes"
            android:text="@string/capital_notes"
            android:padding="@dimen/_8sdp"
            android:textAlignment="center"
            android:textColor="@color/color_primary"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_25ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_chart"
            android:text="@string/chart"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/color_primary"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_25ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_settings"
            android:text="@string/settings"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/color_primary"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_25ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>