<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_delete_chart_values_container"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_delete_value"
        app:tint="@color/color_white"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp" />

    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_delete_value"
        app:layout_constraintBottom_toBottomOf="@id/image_delete_value"
        app:layout_constraintTop_toTopOf="@id/image_delete_value"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/delete_value_from_chart"
        android:textSize="@dimen/_13ssp"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/color_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_label"
        app:layout_constraintTop_toBottomOf="@+id/image_delete_value"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/write_a_label_to_delete"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="text"
        android:maxLength="25"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_gray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="109dp" />

    <TextView
        android:id="@+id/text_delete_dialog_chart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_label"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/delete_chart_value"
        android:textAllCaps="true"
        android:textColor="@color/color_context"
        android:textSize="@dimen/_11ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_cancel_dialog_chart_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_delete_dialog_chart"
        app:layout_constraintTop_toBottomOf="@+id/input_label"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/color_delete"
        android:text="@string/cancel"
        android:padding="@dimen/_8sdp"
        android:textAllCaps="true"
        android:includeFontPadding="false"
        android:textSize="@dimen/_11ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>