<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChartActivity">

    <LinearLayout
        android:id="@+id/layout_header_chart"
        android:layout_marginStart="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_23sdp"
        app:layout_constraintBottom_toTopOf="@id/pie_chart"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/color_main_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_back_chart"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:tint="@color/color_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp" />

        <TextView
            android:id="@+id/text_chart_header"
            android:text="@string/chart"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingStart="@dimen/_35sdp"
            android:paddingEnd="@dimen/_4sdp"
            android:fontFamily="@font/affect_bold"
            android:includeFontPadding="false"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_20ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart"
        app:layout_constraintTop_toBottomOf="@id/layout_header_chart"
        android:background="@color/color_main_bg"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_55sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/text_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/add"
        android:textColor="@color/color_white"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/background_add"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_add"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/delete"
        android:textColor="@color/color_white"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/background_delete_chart"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>