<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateNoteActivity">

    <ScrollView
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_back_create_notes"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:tint="@color/color_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp" />

            <ImageView
                android:id="@+id/image_save"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/background_done_button"
                android:src="@drawable/ic_done"
                app:tint="@color/color_gray"
                app:layout_constraintBottom_toBottomOf="@id/image_back_create_notes"
                app:layout_constraintTop_toTopOf="@id/image_back_create_notes"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp" />

            <ImageView
                android:id="@+id/image_add"
                app:layout_constraintBottom_toBottomOf="@id/image_back_create_notes"
                app:layout_constraintTop_toTopOf="@id/image_back_create_notes"
                app:layout_constraintEnd_toStartOf="@+id/image_save"
                android:layout_marginEnd="@dimen/_25sdp"
                android:src="@drawable/ic_image"
                android:contentDescription="@string/app_name"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp" />

            <EditText
                android:id="@+id/input_title"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                app:layout_constraintTop_toBottomOf="@id/image_back_create_notes"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/color_primary"
                android:textColorHint="@color/color_context"
                android:textSize="@dimen/_20ssp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp" />

            <TextView
                android:id="@+id/text_date"
                app:layout_constraintEnd_toEndOf="@id/input_title"
                app:layout_constraintStart_toStartOf="@id/input_title"
                app:layout_constraintTop_toBottomOf="@id/input_title"
                android:fontFamily="@font/ubuntu_light"
                android:includeFontPadding="false"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/_10ssp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_subtitle"
                app:layout_constraintTop_toBottomOf="@id/text_date"
                app:layout_constraintStart_toEndOf="@+id/view_subtitle_indicator"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/color_primary"
                android:textColorHint="@color/color_primary"
                android:textSize="@dimen/_13ssp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/view_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/input_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/input_subtitle"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp" />

            <ImageView
                android:id="@+id/image_note"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:contentDescription="@string/app_name"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/input_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_note"
                app:layout_constraintTop_toBottomOf="@id/image_note"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/color_primary"
                android:textColorHint="@color/color_primary"
                android:textSize="@dimen/_14ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>